--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
                 <div>
                     <a href="#" class="btn btn-primary btn-lg btn-block" id="btn-geolocation">Back to current position</a>
                 </div>
+                <div class="card">
+                    <h5 class="card-title">Navigation</h5>
+                    <div class="form-group">
+                        <label for="selectProvince">Province</label>
+                        <select id="selectProvince" name="selectProvince" class="form-control form-select"></select>
+                    </div>
+                    <div class="form-group">
+                        <label for="selectCity">City</label>
+                        <select id="selectCity" name="selectCity" class="form-control form-select"></select>
+                    </div>
+                </div>
             </div>
             <div class="sidebar-pane" id="fb">
               <div class="fb-page" data-href="https://www.facebook.com/k.olc.tw/" data-tabs="timeline" data-width="380" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/k.olc.tw/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/k.olc.tw/">江明宗</a></blockquote></div>
