update inline documentation

--- a/index.html
+++ b/index.html
@@ -70,16 +70,17 @@
                 <div>
                     Color of points:
                     <ul>
-                        <li><span style="color:#ccc">▲</span> : no data</li>
-                        <li><span style="color:#48c774">▲</span> : Stock > 100</li>
-                        <li><span style="color:#ffdd57">▲</span> : Stock > 40</li>
-                        <li><span style="color:#fc82b1">▲</span> : Stock > 20</li>
-                        <li><span style="color:#f00">▲</span> : Stock <= 20</li>
+                        <li><span style="color:#48c774">▲</span> : Stock = plenty</li>
+                        <li><span style="color:#ffdd57">▲</span> : Stock = some</li>
+                        <li><span style="color:#f00">▲</span> : Stock = few</li>
+                        <li><span style="color:#ccc">▲</span> : Stock = empty</li>
+                        <li><span style="color:#000">▲</span> : no data</li>
                         <li>Blue Point: Your position (require your permission)</li>
                     </ul>
                     Notices:
                     <ul>
                         <li><a href="http://ncov.mohw.go.kr/" target="_blank">Official Website</a></li>
+                        <li><a href="https://hackmd.io/@6VWj8d9yQkKavs-wIUuzLQ/ry5TAjZr8" target="_blank">More information</a></li>
                     </ul>
                 </div>
             </div>
